# Bot-noticias

discord-briefing-bot/: .env.example  .gitignore  README.md  pyproject.toml
discord-briefing-bot/src/briefing_bot/: __init__.py  __main__.py  main.py
discord-briefing-bot/src/briefing_bot/agents/: __init__.py  base_agent.py  briefing_agent.py  onboarding_agent.py
discord-briefing-bot/src/briefing_bot/bot/: __init__.py  conversation.py  discord_bot.py
discord-briefing-bot/src/briefing_bot/config/: __init__.py  settings.py
discord-briefing-bot/src/briefing_bot/models/: __init__.py  briefing.py  user_preferences.py
discord-briefing-bot/src/briefing_bot/repositories/: __init__.py  user_preferences_repository.py
discord-briefing-bot/src/briefing_bot/services/: __init__.py  discord_webhook_service.py  email_service.py  news_service.py  retry.py  scheduler_service.py
discord-briefing-bot/tests/: test_briefing_agent.py  test_conversation.py  test_models.py  test_repository.py  test_scheduler_service.py
