[project]
name = "discord-briefing-bot"
version = "0.1.0"
description = "Personalized AI news briefings delivered through Discord and email."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "agno>=2.5.0",
    "apscheduler>=3.10.4",
    "ddgs>=9.0.0",
    "discord.py>=2.4.0",
    "newsapi-python>=0.2.7",
    "pydantic>=2.8.0",
    "python-dotenv>=1.0.1",
    "pytz>=2024.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[project.scripts]
briefing-bot = "briefing_bot.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/briefing_bot"]

[tool.ruff]
line-length = 88
target-version = "py311"
extend-exclude = [".pytest-tmp", ".tmp", "pytest-cache-files-*"]
cache-dir = ".cache/ruff"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
